--- a/main.html
+++ b/main.html
@@ -84,7 +84,7 @@
 
 async function runModel(image) {
   // Преобразование изображения в тензор
-  const inputTensor = tf.browser.fromPixels(image)
+ /* const inputTensor = tf.browser.fromPixels(image)
     .resizeBilinear([224, 224])  // Изменение размера
     .expandDims(0)  // Добавление измерения батча
     .toFloat()
@@ -94,7 +94,7 @@ async function runModel(image) {
   const prediction = await model.predict(inputTensor);
   
   // Возвращаем предсказание
-  return prediction;
+  return prediction;*/
 }
 
     async function postprocess(predictions, originalWidth, originalHeight) {
@@ -139,7 +139,7 @@ async function runModel(image) {
         const view = pose.views[0];
 
         // Обработка кадра
-        await processFrame(gl, view.camera);
+       // await processFrame(gl, view.camera);
 
         renderer.render(scene, camera);
       }
