--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
     const MODEL_PATH = 'jsModel/model.json'; // Путь к модели
 
     async function loadModel() {
-      model = await tf.loadGraphModel(MODEL_PATH);
+     // model = await tf.loadGraphModel(MODEL_PATH);
     }
 
     async function activateXR() {
