--- a/main.html
+++ b/main.html
@@ -131,7 +131,7 @@
                 rotationVector.y * radToDeg,
                 rotationVector.z * radToDeg
               );
-
+              document.getElementById('info').innerText = "capture";
           /*    document.getElementById('info').innerText =
                 `Distance Z: ${zDistance.toFixed(2)}\n` +
                 `Camera to Gravity Angle: (${rotationVectorDegrees.x.toFixed(2)}°, ${rotationVectorDegrees.y.toFixed(2)}°, ${rotationVectorDegrees.z.toFixed(2)}°)`;
